package org.cd.designpatterns.factory.framework;

/**
 * @classname: Factory
 * @description:
 * @author: Danny Chen
 * @create: 2019-04-14 15:51
 */
public abstract class Factory {
    public final Product create(String owner) {
        Product p = createProduct(owner);
        registerProduct(p);
        return p;
    }
    protected abstract Product createProduct(String owner);
    protected abstract void registerProduct(Product product);
}
