package org.cd.designpatterns.factory.framework;

/**
 * @classname: Product
 * @description:
 * @author: Danny Chen
 * @create: 2019-04-14 15:49
 */
public abstract class Product {
    public abstract void use();
}
